[package]
name = "socketron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
byteorder = "1.4.3"
tokio = { version = "1.21.2", features = ["full"] }
iso-8583-message = { path = "../iso-8583-message" }